--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,14 @@
 
 html {
     font-size: 62.5%;
+    box-sizing: border-box;
 }
+*, *::before, *::after {
+    box-sizing: inherit;
+}
+
+}
+
 body {
     font-size: 16px; /* 1rem = 10px */
     font-family: 'krub', sans-serif;
@@ -26,7 +33,7 @@ h1.titulo span {
 }
 
 .contenedor {
-    width: 120rem;
+    max-width: 120rem;
     margin: 0 auto;
 }
 
@@ -36,10 +43,20 @@ h1.titulo span {
 
 .nav-principal {
   display: flex;
- justify-content: space-between;   
+  flex-direction: column;
+  align-items: center;   
+}
+@media (min-width: 480px) {
+    .nav-principal {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+   
 }
 
 .nav-principal a {
+    display: block;
+    text-align: center;
    color: var(--white);
    text-decoration: none;
    font-size: 2rem;
@@ -50,4 +67,19 @@ h1.titulo span {
 .nav-principal a:hover {
     background-color: var(--primary);
     color: var(--dark);
+}
+
+.hero {
+    background-image: url(../img/hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 45rem;
+    position: relative; /* Elemento padre siempre posicion relativa para que el hijo pueda ser absoluta */
+}
+
+.contenido-hero {
+    position: absolute;
+    background-color: rgb(0 0 0 / 70%); /* sintaxis nueva */
+    width: 100%;
+    height: 100%;
 }
