--- a/css/styles.css
+++ b/css/styles.css
@@ -4,37 +4,82 @@
     --primary: #ffc107;
     --secondary: #0097a7;
     --gray: #757575;
+    --softgray: #dfe9f3;
     --principal-font: 3.8rem;
 }
 
+/* Globales */
 html {
-    font-size: 62.5%;
+    font-size: 62.5%; /* hack para box model */
     box-sizing: border-box;
 }
 *, *::before, *::after {
     box-sizing: inherit;
 }
 
-}
 
 body {
     font-size: 16px; /* 1rem = 10px */
     font-family: 'krub', sans-serif;
-}
-
-.titulo {
-    text-align: center;
-    font-size: var(--principal-font);
-     }
-
-h1.titulo span {
-    font-size: 2rem;
-
+    background-image: linear-gradient(to top, var(--softgray) 0%, var(--white) 100%);
 }
 
 .contenedor {
     max-width: 120rem;
     margin: 0 auto;
+}
+
+.button {
+    background-color: var(--secondary);
+    color: var(--white);
+    padding: 1rem 3rem;
+    margin-top: 3rem;
+    font-size: 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: .5rem;
+    width: 90%;
+    text-align: center;
+}
+
+.sombra {
+-webkit-box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.54);
+-moz-box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.54);
+box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.54);
+background-color: var(--white);
+padding: 2rem;
+border-radius: 1rem;
+}
+
+/* Tipografia */
+h1 {
+    font-size: 3.8rem;
+}
+
+h2 {
+    font-size: 2.8rem;
+}
+
+h3 {
+    font-size: 1.8rem;
+}
+
+h1,h2,h3 {
+    text-align: center;
+}
+
+/* Titulos */
+h1.titulo span {
+    font-size: 2rem;
+
+}
+
+
+@media (min-width: 768px) {
+    .button {
+        width: auto;
+    }
 }
 
 .nav-bg {
@@ -75,6 +120,7 @@ h1.titulo span {
     background-size: cover;
     height: 45rem;
     position: relative; /* Elemento padre siempre posicion relativa para que el hijo pueda ser absoluta */
+    margin-bottom: 2rem;
 }
 
 .contenido-hero {
@@ -82,4 +128,15 @@ h1.titulo span {
     background-color: rgb(0 0 0 / 70%); /* sintaxis nueva */
     width: 100%;
     height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
+
+.contenido-hero h2,
+.contenido-hero p {
+    color: var(--white);
+}
+
