--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,18 @@ body {
     border-radius: .5rem;
     width: 90%;
     text-align: center;
+    border: none;
+}
+
+
+@media (min-width: 768px) {
+    .button {
+        width: auto;
+    }
+}
+
+.button:hover {
+    cursor: pointer;
 }
 
 .sombra {
@@ -75,11 +87,23 @@ h1.titulo span {
 
 }
 
+/* utilidades */
+.w-small-100 {
+    width: 100%;
+}
 
 @media (min-width: 768px) {
-    .button {
-        width: auto;
-    }
+   .w-small-100 {
+       width: auto;
+   }
+}
+
+.flex {
+    display: flex;
+}
+
+.alinear-derecha {
+    justify-content: flex-end;
 }
 
 .nav-bg {
@@ -138,5 +162,89 @@ h1.titulo span {
 .contenido-hero h2,
 .contenido-hero p {
     color: var(--white);
+}
+
+/* Servicios */
+
+@media (min-width: 768px) {
+   
+    .servicios {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr); /* repidte x3 fracciones iguales */
+        column-gap: 5rem; /* espaciado entre columnas */
+    }
+}
+
+.servicio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.servicio h3 {
+    color: var(--secondary);
+    font-weight: normal;
+}
+
+.servicio p {
+    line-height: 2;
+    text-align: center;
+}
+
+.servicio .iconos {
+    height: 15rem;
+    width: 15rem;
+    background-color: var(--primary);
+    border-radius: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+/* contacto */
+
+.formulario {
+    background-color: var(--gray);
+    width: min( 60rem, 100% ); /* utilizar el valor mas pequeño */
+    margin: 0 auto; /* ideal para formularios y padres display:block */
+    padding: 2rem;
+    border-radius: 1rem;
+
+}
+
+.formulario fieldset{
+    border: none;
+}
+
+.formulario legend {
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    color: var(--primary);
+}
+
+.contenedor-campos {
+
+
+}
+
+.campo {
+    margin-bottom: 1rem;
+}
+
+.campo label {
+    color: var(--white);
+    font-weight: bold;
+    margin-bottom: .5rem;
+    display: block;
+}
+
+.input-text {
+    width: 100%;
+    border: none;
+    padding: 1.5rem;
+    border-radius: .5rem;
 }
 
