--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,8 @@
 /* Globales */
 html {
     font-size: 62.5%; /* hack para box model */
-    box-sizing: border-box;
+    box-sizing: border-box; /* mejora el uso de las medidas, sumando border y padding */
+    scroll-snap-type: y mandatory;
 }
 *, *::before, *::after {
     box-sizing: inherit;
@@ -164,6 +165,15 @@ h1.titulo span {
     color: var(--white);
 }
 
+/* scroll snap, opcional
+.servicios, 
+.nav-principal, 
+.formulario {
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
+}
+*/
+
 /* Servicios */
 
 @media (min-width: 768px) {
@@ -225,10 +235,19 @@ h1.titulo span {
     color: var(--primary);
 }
 
+@media (min-width: 768px) {
+   
 .contenedor-campos {
-
-
-}
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* se define # de columnas */
+    grid-template-rows: auto auto 20rem; /* se define # de filas */
+    column-gap: 1rem;
+    }
+    .campo:nth-child(3),
+    .campo:nth-child(4) {
+        grid-column: 1 / 3;
+    }
+} /* los 2 primeros input se ubican en una sola fila */
 
 .campo {
     margin-bottom: 1rem;
@@ -241,6 +260,10 @@ h1.titulo span {
     display: block;
 }
 
+.campo textarea {
+    height: 20rem;
+}
+
 .input-text {
     width: 100%;
     border: none;
@@ -248,3 +271,6 @@ h1.titulo span {
     border-radius: .5rem;
 }
 
+.footer {
+    text-align: center;
+}
